# rr-g

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/modules/: actor.rs  ai.rs  animation.rs  arena.rs  ball.rs  collision.rs  helpers.rs  input.rs  matchup.rs  mod.rs  physics.rs  player.rs  round.rs  states.rs  team.rs  ui.rs  utils.rs
