[package]
name = "rr-g"
version = "0.1.0"
authors = ["Juraj Sebin <sebin.juraj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1

[dependencies]
bevy = "0.5.0"
bevy_rapier2d = "0.9.0"